--- a/Assignment0/Views/Account/Registration.cshtml
+++ b/Assignment0/Views/Account/Registration.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Registration">
+        <form asp-action="Registration" enctype="multipart/form-data" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -32,14 +32,28 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+            <div style="height: 6px;"></div>
             <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
+                <label asp-for="Gender" class="control-label"></label><br />
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="Gender" name="Gender" value="Male" />
+                    <label class="form-check-label" for="Gender">Male</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="Gender" name="Gender" value="Female" />
+                    <label class="form-check-label" for="Gender">Female</label>
+                </div>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Education" class="control-label"></label>
-                <input asp-for="Education" class="form-control" />
+                <select asp-for="Education" class="form-control">
+                    <option value="">-- Select Education --</option>
+                    <option value="UG">UG</option>
+                    <option value="PG">PG</option>
+                    <option value="PhD">PhD</option>
+                </select>
                 <span asp-validation-for="Education" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,7 +61,14 @@
                 <input asp-for="MobileNumber" class="form-control" />
                 <span asp-validation-for="MobileNumber" class="text-danger"></span>
             </div>
-            <div style="height: 10px;"></div>
+            <div style="height: 7px;"></div>
+            <div class="form-group">
+                <label asp-for="ProfilePicture" class="control-label"></label>
+                <input asp-for="ProfilePicture" type="file" accept=".jpg" class="form-control" />
+                <span asp-validation-for="ProfilePicture" class="text-danger"></span>
+            </div>
+
+            <div style="height: 7px;"></div>
             <div class="form-group">
                 <input type="submit" value="Registration" class="btn btn-primary" />
             </div>
