--- a/Assignment0/Views/Account/SecurePage.cshtml
+++ b/Assignment0/Views/Account/SecurePage.cshtml
@@ -38,7 +38,7 @@
 </style>
 
 <div class="container">
-    <img class="profile-pic" src="~/uploads/@ViewBag.ProfilePicture" alt="Profile Picture" />
+    <img class="profile-pic" src="~/uploads/@ViewBag.ProfilePicturePath" alt="Profile Picture" />
     <h1>Hello, @ViewBag.Name 👋</h1>
     <h2>Your Email ID is:</h2>
     <div class="info">@ViewBag.Email</div>
