--- a/Assignment0/Views/Shared/_Layout.cshtml
+++ b/Assignment0/Views/Shared/_Layout.cshtml
@@ -12,7 +12,6 @@
     <header>
         @if (ViewBag.HideNavbar != true)
         {
-            <!-- Your Navbar HTML Here -->
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
                 <div class="container-fluid">
                     <a class="navbar-brand" asp-area="" asp-controller="Account" asp-action="SecurePage">Home</a>
@@ -32,8 +31,8 @@
         }
         else
         {
-            <!-- Alternative content (e.g., blank space or minimal bar) -->
-            <div style="height: 60px;"></div>
+           
+            <div style="height: 20px;"></div>
         }
        
     </header>
@@ -45,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 -  Tirth Bhatiya - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 -  Tirth Bhatiya 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
