--- a/Assignment0/Views/Account/Registration.cshtml
+++ b/Assignment0/Views/Account/Registration.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
+                <label asp-for="ConfirmPassword" class="control-label">Confirm Password</label>
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
@@ -57,8 +57,8 @@
                 <span asp-validation-for="Education" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MobileNumber" class="control-label"></label>
-                <input asp-for="MobileNumber" class="form-control" />
+                <label asp-for="MobileNumber" class="control-label">Mobile Number</label>
+                <input asp-for="MobileNumber" class="form-control" maxlength="10"/>
                 <span asp-validation-for="MobileNumber" class="text-danger"></span>
             </div>
             <div style="height: 7px;"></div>
