--- a/Assignment0/Views/Shared/_Layout.cshtml
+++ b/Assignment0/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="Country">CountryMaster</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                         </ul>
