--- a/Assignment0/Views/Shared/_Layout.cshtml
+++ b/Assignment0/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="Country">CountryMaster</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="State" asp-action="State">StateMaster</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                         </ul>
